fix(Exec Toolbar): Give status text more room on small screens

--- a/packages/style-stencila/src/objects/executableToolbar.css
+++ b/packages/style-stencila/src/objects/executableToolbar.css
@@ -14,6 +14,14 @@ stencila-executable-document-toolbar {
     }
   }
 
+  .hidden-sm {
+    @apply hidden;
+
+    @screen sm {
+      @apply inline;
+    }
+  }
+
   .executableDocumentStatus {
     @apply text-sm leading-none text-key;
 
